need to fix contact section overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,10 +71,7 @@ body {
 
 /* ===nav=== */
 
-.navbar {
-  background-color: #fff;
-  border-bottom: 2px solid #4bacb8;
-}
+
 .navbar-brand {
   position: relative;
   background-image: url("../img/logo2.png");
@@ -104,6 +101,11 @@ body {
 .home {
   padding-top: 100px;
   padding-bottom: 100px;
+  height: 100vh;
+}
+
+.hidden-nm {
+  color: #D74E8A;
 }
 
 .typing h2 {
@@ -120,22 +122,35 @@ body {
 }
 
 .skill {
-  padding-top: 20px;
+  margin-top: 100px;
+  height: 100vh;
 }
 
 
 /* proj section */
 .projects {
-  background-color: #cdffff;
-  color: #66b2c4;
+  background-color: #fff;
+  color: #f44e96;
   padding-top: 200px;
   padding-bottom: 80px;
+  height: 100vh;
+}
+
+.proj-cards {
+  color: black;
 }
 
 .contact {
   padding-top: 200px;
-  margin-bottom: 200px;
+  margin-bottom: 0px;
+  background-color: white;
+  height: 100vh;
 }
+.about-list {
+  list-style: none;
+  font-size: 20px; 
+}
+
 
 /* ===btn & icons== */
 
@@ -152,4 +167,58 @@ body {
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: orange }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .typing h2 {
+    display: none;
+  }
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (min-width: 600px) {
+  .typing h1 {
+    display: inline;
+  }
+}
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .typing h1 {
+    display: none;
+  }
+
+
+}
+
+
+@media only screen and (max-width: 768px) {
+  .typing h2 {
+    display: none;
+  }
+  .hi {
+    font-size: 28px;
+  }
+  .lie {
+    font-size: 22px;
+  }
+}
+
+/* display when screen is 1200+ px */
+@media only screen and (min-width: 1200px) {
+  .typing h1 {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .typing h1 {
+    display: none;
+  }
+  .typing h2 {
+    font-size: 14px;
+  }
+
+
 }
